# robotic-arm

./: CMakeLists.txt  README.md  package.xml  robotic_arm.xml
bringup/config/: robotic_arm_controller.yaml  robotic_arm_gazebo_controllers.yaml
bringup/launch/: joystick_control.launch.py  robotic_arm_controller.launch.py  robotic_arm_gazebo.launch.py  send_trajectory.launch.py
controller/: robotic_arm_controller.cpp
controller/include/robotic_arm/: robotic_arm_controller.hpp
description/gazebo/: robotic_arm.gazebo.xacro
description/launch/: view_robot.launch.py
description/ros2_control/: robotic_arm.ros2_control.xacro  robotic_arm_gazebo.ros2_control.xacro
description/urdf/: robotic_arm.urdf.xacro  robotic_arm_gazebo.urdf.xacro
hardware/: robotic_arm_hardware.cpp
hardware/include/robotic_arm/: robotic_arm_hardware.hpp
reference_generator/: send_trajectory.cpp
robotic_arm_description/r6bot/urdf/: r6bot_description.urdf.xacro
teleop/scripts/: joystick_control.py
